# jaxrwkv

./: .gitignore  README.md  pyproject.toml
examples/: generate_minipile.py  gymnax_ppo.py  reasoning_drgrpo.py  train_scratch.py  train_scratch_fsdp.py
examples/experimental/: base_timing.py  do_evolution.py  do_evolution_alteval.py  do_evolution_nonlora.py  do_grpo.py  do_gsm8k_evolution.py  do_reinforce.py  full_evolution_timing.py  simple_reward_functions.py
jaxrwkv/: auto.py  rwkv4.py
src/jaxrwkv/: auto.py  llm.py  rwkv4.py  rwkv5.py  rwkv5_2.py  rwkv6.py  rwkv7.py  tokenizer.py
src/jaxrwkv/utils/: fsdp.py
tests/: check_lambada.py  check_lambada_torch.py  custom_vmap_test.py  fake_scan_util.py  forward_timing.py  get_model_shape.py  grad_test.py  rand_creation.py  rand_grad_test.py  rwkv4_tests.py  starts_and_length_test.py  train_timing.py  validate_torch.py  vmap_test.py
