[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ['jaxrwkv*']

[tool.setuptools.package-data]
jaxrwkv = ["tok_files/*"]

[tool.setuptools.dynamic]
version = {attr = "jaxrwkv.__version__"}

[project]
name = "jaxrwkv"
readme = "README.md"
description = "RWKV in JAX"
authors = [
    {name = "Bidipta Sarkar", email = "bidiptas13@gmail.com"}
]
dynamic = ["version"]
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = [
    "jax<=0.5.0",
    "jaxlib",
    "huggingface_hub",
    "tokenizers",
    "einops",
    "torch"
]

[project.optional-dependencies]
cuda12 = [
    "jax[cuda12]"
]
macos = [
    "jax-metal",
]
testing = [
    "rwkv",
    "transformers",
    "ninja",
    "tyro",
]